chore: change project setup and build tool * use vite instead of webpack * for faster compilation and simpler configurataion * remove unrelated content

--- a/packages/playground/index.html
+++ b/packages/playground/index.html
@@ -2,11 +2,11 @@
 
 <head>
     <title>javascript playground</title>
-    <script type="text/javascript" src="./src/loop.js"></script>
 </head>
 
 <body>
     <h1>javascript playground</h1>
+    <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
